# genericImg

./: .gitignore  AUTHORS  Makefile.am  PKGBUILD  README.md  configure.ac  make2ccls.sh  meson.build  meson.options
include/: BinView.hpp  DateUtils.hpp  ExifReader.hpp  ImageOptions.hpp  ImageUtils.hpp  ImageView.hpp  JsonHelper.hpp  JsonObj.hpp  KeyConfig.hpp  LocaleContext.hpp  Log.hpp  LogImpl.hpp  LogView.hpp  LogViewFile.hpp  LogViewSysd.hpp  LogViewSyslog.hpp  PdfExport.hpp  PdfFont.hpp  PdfPage.hpp  Plot.hpp  StringUtils.hpp  ThreadWorker.hpp  TreeNodeModel.hpp  meson.build  psc_i18n.hpp
pkg/genericimg/usr/include/genericimg/: ApplicationSupport.hpp  BinModel.hpp  BinView.hpp  ConcurrentCollections.hpp  ImageArea.hpp  ImageFileChooser.hpp  ImageList.hpp  ImageOptionDialog.hpp  ImageView.hpp  LocaleContext.hpp  Mode.hpp
pkg/genericimg/usr/share/doc/genericimg/: NEWS
res/: Makefile.am  genericimg.gresources.xml  meson.build  table_properties.ui
src/: AbstractTableManager.cpp  AbstractTableManager.hpp  ApplicationSupport.cpp  ApplicationSupport.hpp  BinModel.cpp  BinModel.hpp  BinView.cpp  BinView.hpp  ConcurrentCollections.cpp  ConcurrentCollections.hpp  DateUtils.cpp  DateUtils.hpp  DisplayImage.cpp  DisplayImage.hpp  ExifReader.cpp  ExifReader.hpp  Files.cpp  Files.hpp  ImageArea.cpp  ImageArea.hpp  ImageFileChooser.cpp  ImageFileChooser.hpp  ImageList.cpp  ImageList.hpp  ImageOptionDialog.cpp  ImageOptionDialog.hpp  ImageOptions.cpp  ImageOptions.hpp  ImageUtils.cpp  ImageUtils.hpp  ImageView.cpp  ImageView.hpp  JsonHelper.cpp  JsonHelper.hpp  JsonObj.cpp  JsonObj.hpp  KeyConfig.cpp  KeyConfig.hpp  KeyfileTableManager.cpp  KeyfileTableManager.hpp  (+42 more)
test/: JsonTest.cpp  JsonTest.hpp  Makefile.am  WorkerTest.cpp  WorkerTest.hpp  log_test.cpp  meson.build  pdf_test.cpp  unic_test.cpp  util_test.cpp
