

sources = files(
     'ConcurrentCollections.cpp'
	,'LocaleContext.cpp'
	,'ImageUtils.cpp'
	,'ImageView.cpp'
	,'BinModel.cpp'
	,'BinView.cpp'
	,'ImageOptions.cpp'
	,'ImageFileChooser.cpp'
	,'ImageOptionDialog.cpp'
	,'ImageArea.cpp'
	,'ExifReader.cpp'
	,'ImageList.cpp'
	,'DisplayImage.cpp'
	,'ApplicationSupport.cpp'
	,'Mode.cpp'
	,'JsonHelper.cpp'
	,'JsonObj.cpp'
	,'Log.cpp'
	,'LogImpl.cpp'
	,'LogView.cpp'
	,'LogViewSysd.cpp'
	,'LogViewFile.cpp'
	,'LogViewSyslog.cpp'
	,'DateUtils.cpp'
	,'AbstractTableManager.cpp'
	,'KeyfileTableManager.cpp'
	,'TableProperties.cpp'
	,'StringUtils.cpp'
	,'psc_Files.cpp'
	,'ThreadWorker.cpp'
	,'TreeNodeModel.cpp'
	,'Plot.cpp'
	,'KeyConfig.cpp' )

if libharu_deps.found()
    sources += files(
     'PdfExport.cpp'
	,'PdfFont.cpp'
	,'PdfImage.cpp'
	,'PdfPage.cpp' )
endif

